--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -49,6 +49,8 @@
 
 
 \section{Introduction}
+
+    Reference Sonia Kefi somewhere! 
     
     1. Networks are important tools for understanding ecosystems: functioning, stability, diversity + roles of species. Non-trophic interactions however are often omitted from networks! 
 
@@ -270,22 +272,10 @@
         % Because some species have stronger effects on other species abundances and are more crucial to the maintenance of biodiversity, management efforts can be prioritised towards their conservation. 
 
         \paragraph{}
-        Certain species play important roles in the community which can be deduced from their position in the interaction network \citep{Cirtwill2018a}. Keystone species for example are both crucial to maintaining the organisation and diversity of their community, and have exceptionally strong effects on other species \citep{Mills1993}, often leading to secondary extinctions when they are removed from a network. Their influence on the abundance of other species and wider community dynamics is disproportionately high compared to their biomass \citep{Power1996, Piraino2002, Libralato2006}, which allows easy identification of potential keystone species from our network results (Fig. \ref{fig:species}) though further tests are recommended for validation. [The two species were \textit{Gilberta tenuifolia} and \textit{Haloragis odontocarpa} in case that's interesting.] Foundation species also control local biodiversity but are widely connected, locally abundant and hold a unique position in regards to their effects on community dynamics \citep{Ellison2005, Baiser2013, Ellison2019}. Though it can take many years of careful study to identify foundation species from abundant species which are not as crucial to community structure, our framework can help distinguish species which are abundant and interact weakly with neighbours from species which have strong competitive and facilitative effects on the community. Identifying keystone, foundation and other important types of species roles is helpful for maintaining biological diversity, ecosystem integrity and functioning, especially in response to disturbances and other stresses \citep{Nyakatya2008, Orwin2016, Losapio2017, Narwani2019}.
+        Certain species play important roles in the community which can be deduced from their position in the interaction network \citep{Cirtwill2018a}. Keystone species for example are both crucial to maintaining the organisation and diversity of their community, and have exceptionally strong effects on other species \citep{Mills1993}, often leading to secondary extinctions when they are removed from a network. Their influence on the abundance of other species and wider community dynamics is disproportionately high compared to their biomass \citep{Power1996, Piraino2002, Libralato2006}, which allows easy identification of potential keystone species from our network results (Fig. \ref{fig:species}) though further tests are recommended for validation. [The two species were \textit{Gilberta tenuifolia} and \textit{Haloragis odontocarpa} in case that's interesting.] Foundation species also control local biodiversity but are widely connected, locally abundant and hold a unique position in regards to their effects on community dynamics \citep{Ellison2005, Baiser2013, Ellison2019}. Though it can take many years of careful study to identify foundation species from abundant species which are not as crucial to community structure, our framework can help distinguish species which are abundant and interact weakly with neighbours from common species which have strong competitive and facilitative effects on the community. Identifying keystone, foundation and other important types of species roles is helpful for maintaining biological diversity, ecosystem integrity and functioning, especially in response to disturbances and other stresses \citep{Nyakatya2008, Orwin2016, Losapio2017, Narwani2019}.
 
         \paragraph{}
-        Network approaches can also be used to determine how specific species are integrated within the community. 
-
-
-        We can determine whether invasive species are competing with or impacting many of the native species \citep{Naeem2000, Riley2008}, or if they are disproportionally affecting a handful of species. 
-        \citep{Rodriguez2006} invasive species facilitating natives and can have cascading effects on other species and restructure the community
-
-        Weak interactions between invasive and native species would indicate low resource sharing, such that the invasive species are probably exploiting 'empty' niche space rather taking over the niche space of natives. 
-
-        Threatened species would also benefit from this type of analysis, as we could deduce which other community members are hindering or helping their recovery. This is especially relevant for rare species, as recent work suggests they are the prime emitters and beneficiaries of facilitative interactions, forming mutualistic refuges from competitive dominants. 
-        If that is indeed the case, quantifying the interaction networks would help us identify which other species may be involved in 'propping up' the species of interest. 
-
-        For example, \citet{Ramus2017} found that an invasive species could replace a native foundation species in its absence, and have a net positive effects on ecosystem processes. 
-        \citep{Naeem2000} community competitive effects on invader
+        Network approaches can also be used to evaluate how specific species are integrated within the community. Our case study for example illustrates how different exotic species can have widely varying competitive and facilitative effects on neighbours (Fig. \ref{fig:species}). Though many invasive species compete with natives \citep{Naeem2000, Riley2008, Zheng2015}, several studies have found evidence of invasives facilitating natives, with cascading effects on other species and net positive effects on ecosystem processes \citep{Rodriguez2006, Ramus2017}. Alternatively, threatened species could also benefit from this type of analysis. Recent work suggests rare species are the prime emitters and beneficiaries of facilitative interactions, forming mutualistic refuges from competitive dominants \citep{Calatayud2019, Hines2020}. Identifying neighbouring species which facilitate and increase the local abundance of rarer, endangered target species is one of many strategies which could help guide conservation management.
 
 
     \subsection{Understanding community diversity and stability}
